--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,9 @@
 server {
   listen 80;
+  server_name localhost;
+
   root /usr/share/nginx/html;
-  index index.html;
+  index index.html index.htm;
 
   location / {
     try_files $uri /index.html;
