--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "textcounter",
-  "homepage": "https://Zakirhusen.github.io/TexAnalyzer",
+  "homepage": "/TexAnalyzer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
